[package]
name = "philvolcs-quakes"
version = "0.1.0"
authors = ["fdeantoni <fdeantoni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "2.0", features = ["openssl"]}
openssl = "0.10"
actix-web-static-files = "0.3"
actix-files = "0.2"
actix-rt = "1.0"
askama = "0.8"
scraper = "0.11"
log = "0.4"
env_logger = "0.7"

[build-dependencies]
actix-web-static-files = "0.3"

