[package]
name = "quakes-scraper"
version = "0.1.0"
authors = ["fdeantoni <fdeantoni@gmail.com>"]
edition = "2018"

[dependencies]
awc = {version = "1.0", features = ["openssl"]}
openssl = "0.10"
scraper = "0.11"
log = "0.4"
quakes-api = { path = "../api" }

[dev-dependencies]
actix-rt = "1.0"
env_logger = "0.7"
