[package]
name = "quakes-server"
version = "0.1.0"
authors = ["fdeantoni <fdeantoni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio = { version = "0.2", features = ["full"] }
actix = "0.9.0"
actix-codec = "0.2.0"
actix-web = "2.0"
actix-web-actors = "2.0"
actix-web-static-files = "2.0"
actix-files = "0.2"
actix-rt = "1.0"
actix-service = "1.0"
askama = "0.9"
log = "0.4"
env_logger = "0.7"
dotenv = "0.15"
futures = "0.3.1"
bytes = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
quakes-api = { path = "../api" }
quakes-scraper = { path = "../scraper" }
quakes-twitter = { path = "../twitter" }

[build-dependencies]
actix-web-static-files = "2.0"