[package]
name = "quakes-twitter"
version = "0.1.0"
authors = ["fdeantoni <fdeantoni@gmail.com>"]
edition = "2018"

[dependencies]
awc = {version = "1.0", features = ["openssl"]}
openssl = "0.10"
quakes-api = { path = "../api" }

[dev-dependencies]
actix-rt = "1.0"
dotenv = "0.15"
env_logger = "0.7"
